# zalileo

./: README.md
GNSSLogger/: build.gradle  gradle.properties
GNSSLogger/app/: build.gradle
GNSSLogger/app/src/main/: AndroidManifest.xml
GNSSLogger/app/src/main/java/com/google/android/apps/location/gps/gnsslogger/: FileLogger.java  MeasurementProvider.java  UiLogger.java
GNSSLogger/gradle/wrapper/: gradle-wrapper.properties
GNSSLogger/pseudorange/: build.gradle
proving/: file_id  gnss_log_2024_08_11_06_23_59.nmea  gnss_log_2024_08_11_15_26_14.nmea  gnss_log_2024_08_11_17_45_04.nmea  priv.pem  privateKey.txt  proof  pub.pem  publicKey.txt  public_inputs  signature.txt
proving/host/: Cargo.toml
proving/host/src/: main.rs
proving/methods/guest/: Cargo.toml
proving/methods/guest/src/: main.rs
zalileo/: App.tsx  ProveScreen.tsx  StartScreen.tsx  VerifyScreen.tsx  index.js  package.json  tsconfig.json
zalileo-app/: app.json  package.json
zalileo-app/android/: settings.gradle
zalileo-app/android/app/src/main/java/com/zalileo/: MainApplication.kt
zalileo-app/android/app/src/main/res/values/: strings.xml
zalileo-app/ios/zalileo/: AppDelegate.mm  Info.plist
zalileo-app/ios/zalileo.xcodeproj/: project.pbxproj
zalileo-app/ios/zalileo.xcworkspace/: contents.xcworkspacedata
zalileo-app/ios/zalileoTests/: zalileoTests.m
zalileo/android/app/: build.gradle
zalileo/android/app/src/main/java/com/zalileo/: MainActivity.kt
zalileo/components/: CustomButton.tsx
zalileo/ios/: Podfile
zalileo/ios/zalileo/: LaunchScreen.storyboard
zalileo/ios/zalileo.xcodeproj/: project.pbxproj
zalileo/ios/zalileo.xcodeproj/xcshareddata/xcschemes/: zalileo.xcscheme
